# final_challenge2024

./: README.md
city_driving/path_planner/: path_builder.py  utils.py
city_driving/stop_detector/: stop_detector.py
luigi_castle/: package.xml  setup.cfg  setup.py
luigi_castle/config/: luigi_castle_config.yaml  luigi_castle_config_sim.yaml
luigi_castle/launch/: luigi_castle.launch.xml  luigi_castle_sim.launch.xml
luigi_castle/luigi_castle/: homograhy_transformer.py  homography_transformer.py  path_builder.py  path_builder_sim.py  path_follower.py  path_follower_sim.py  stop_detector.py  utils.py
mario_circuit/: package.xml  setup.cfg  setup.py
mario_circuit/config/: mario_circuit_config.yaml
mario_circuit/launch/: mario_circuit.launch.xml
mario_circuit/mario_circuit/: goal_follower.py  goal_from_image.py  goal_from_image_OLD.py  goal_publisher.py  homography_transformer.py  lane_segmentation.py  lane_segmentation_OLD.py
rosbags/3ms/: 3ms_0.db3  metadata.yaml
rosbags/3msfloat/: 3msfloat_0.db3  metadata.yaml
rosbags/3msfloat2/: 3msfloat2_0.db3  3msfloat2_0.db3-shm  3msfloat2_0.db3-wal
rosbags/3msfloat3/: 3msfloat3_0.db3  metadata.yaml
