<?xml version="1.0"?>
<package format="3">
  <name>mario_circuit</name>
  <version>1.0.0</version>
  <description>Package for the Mario Circuit challenge.</description>
  <maintainer email="sebastianag2002@gmail.com">racecar@mit.edu</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
